notifications.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: notifications-deployment
   labels:
     app: notifications
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: notifications
   template:
     metadata:
       labels:
         app: notifications
     spec:
       containers:
       - image: kaiomagalhaes/roadrunner-notifications:v0.7.0
         name: notifications
         ports:
           - containerPort: 5001
         env:
         - name: SLACK_API_KEY
           valueFrom:
             secretKeyRef:
               name: notifications-secret
               key: slack-api-key
         - name: AUTHENTICATION_KEY
           valueFrom:
             secretKeyRef:
               name: notifications-secret
               key: authentication-key
         - name: LOG_HOST
           value: "test-notification-k8s"
         - name: LOG_ENV
           value: "qa"
         - name: PORT
           value: '5001'
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  selector:
    app: notifications
  ports:
   - name: http
     port: 5001
     targetPort: 5001
