service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roadrunner-service
spec:
  selector:
    app: roadrunner
  type: LoadBalancer
  ports:
   - protocol: TCP
     port: 5000
     targetPort: 5000
     nodePort: 30000
