ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roadrunner-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - k8s.roadrunner.codelitt.dev
    secretName: roadrunner-kubernetes-tls
  rules:
  - host: k8s.roadrunner.codelitt.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: roadrunner-service
            port:
              number: 5000
